# docs

./: .gitlab-ci.yml  404.html  CNAME  Pipfile  README.md  index.html  mkdocs.yml  package-lock.json  pyproject.toml  swagger-yaml-to-html.py
.github/workflows/: deploy.yml  github-actions.yml
acknowledgements/: index.html
authors/: index.html
basic-concepts/conceptual-architecture/: index.html
basic-concepts/terminology/: index.html
basic-concepts/use-cases/: index.html
docs/: acknowledgements.md  architecture.md  authors.md  available-features.md  contribute-to-docs.md  core-principles.md  faq.md  features.md  how-to-contribute-to-docs.md  index.md  is-it-done-yet.md  license.md  report-bugs.md
docs/api/: elasticsearch-swagger-open-api.md  tables-of-permissions.md  user-and-group-swagger-open-api.md
docs/basic-concepts/: conceptual-architecture.md  terminology.md  typical-workflow-for-training.md  typical-workflow.md  use-cases.md  workflow.md
docs/extras/: how-to-write-documentation.md  sharing-sandbox-between-two-players.md  writing-documentation-mkdocs.md
docs/img/: KYPO-basic-elements-sandboxes.drawio  KYPO-basic-elements-training.drawio  KYPO-basic-elements.drawio  KYPO-portal-diagram.drawio
docs/installation-guide/: base-infrastructure.md  installation-guide-overview.md  kypo-crp-deployment.md  kypo-platform-deployment.md  openstack-requirements.md  platform-components.md  setting-up-oidc-provider.md
faq/: index.html
license/: index.html
search/: search_index.json
site/: 404.html  index.html
stylesheets/: extra.css
(+222 files in other folders)
